--- a/resume.html
+++ b/resume.html
@@ -125,7 +125,7 @@ nav
 <body>
   <nav>
    
-   <img src="..//project/images/vijay.jpg">
+   <img src="vijay.jpg">
    <p> VIJAY E</p>
    <div class="ri">
    <p>Contact No:9344789388</p>
