--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ nav
 <body>
   <nav>
    
-   <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftimesofindia.indiatimes.com%2Flife-style%2Fevents%2Fsurya-grahan-today-annular-solar-eclipse-2019-december-images-photos-pics-video-check-out-these-breathing-pictures-of-the-seasons-last-surya-grahan-of-26-december-2019-india%2Fphotostory%2F72975550.cms&psig=AOvVaw2AC73TgwPoKG0HLEnlj_eC&ust=1594819801288000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPCLpvDszOoCFQAAAAAdAAAAABAD">
+   <img src="vijay.jpg">
    <p> VIJAY E</p>
    <div class="ri">
    <p>Contact No:9344789388</p>
